--- a/package.json
+++ b/package.json
@@ -15,8 +15,6 @@
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
-    "@react-pdf-viewer/core": "^3.7.0",
-    "@react-pdf-viewer/default-layout": "^3.12.0",
     "@supabase/auth-helpers-nextjs": "^0.8.7",
     "@supabase/supabase-js": "^2.39.1",
     "@types/node": "20.4.6",
@@ -27,12 +25,13 @@
     "class-variance-authority": "^0.7.0",
     "cloudinary": "^1.40.0",
     "clsx": "^2.0.0",
+    "embla-carousel-autoplay": "^8.0.0-rc18",
+    "embla-carousel-react": "^8.0.0-rc18",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
     "lucide-react": "^0.263.1",
     "next": "^13.5.6",
     "next-cloudinary": "^4.16.3",
-    "pdfjs-dist": "^2.15.349",
     "postcss": "^8.4.32",
     "react": "18.2.0",
     "react-dom": "18.2.0",
