--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/node": "20.4.6",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
+    "@vercel/analytics": "^1.1.1",
     "autoprefixer": "10.4.14",
     "bufferutil": "^4.0.8",
     "class-variance-authority": "^0.7.0",
