--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cloudinary-photos-app",
+  "name": "steel-detailer-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -37,9 +37,15 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-pdf": "^7.6.0",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "utf-8-validate": "^6.0.3"
+  },
+  "devDependencies": {
+    "@types/react-slick": "^0.23.13"
   }
 }
